empty Hello element

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "jspm": {
+    "dependencies": {
+      "html": "github:Hypercubed/systemjs-plugin-html@^0.0.8"
+    },
     "devDependencies": {
       "typescript": "npm:typescript@^1.6.2"
     }
