--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,12 @@
   "private": true,
   "dependencies": {
     "polymer-ts": "~0.1.26",
-    "pgs-md-ed": "tpluscode/pgd-md-ed"
+    "pgs-md-ed": "tpluscode/pgd-md-ed",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.6",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.9",
+    "paper-listbox": "polymerelements/paper-listbox#~1.1.2",
+    "paper-item": "polymerelements/paper-item#~1.2.1",
+    "iron-ajax": "polymerelements/iron-ajax#~1.4.3",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#~1.1.2"
   }
 }
