--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "paper-listbox": "polymerelements/paper-listbox#~1.1.2",
     "paper-item": "polymerelements/paper-item#~1.2.1",
     "iron-ajax": "polymerelements/iron-ajax#~1.4.3",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#~1.1.2"
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#~1.1.2",
+    "platinum-sw": "PolymerElements/platinum-sw#~1.3.0"
   }
 }
